--- a/shop.html
+++ b/shop.html
@@ -16,14 +16,14 @@
   <link rel="stylesheet" href="assets/css2/app.css">
   <link rel="stylesheet" href="assets/css2/core/02_base.css">
   <link rel="stylesheet" href="assets/hamburger.css">
-  <link rel="stylesheet" href="assets/css2/pages/index2.css">
+  <link rel="stylesheet" href="assets/css2/pages/index.css">
   <link rel="stylesheet" href="assets/css2/fixes/99_hotfix.css">
   <link rel="stylesheet" href="assets/css2/fixes/98_final_polish.css">
   <script src="assets/main.js" defer></script>
 </head>
   
 <body>
-<body class="page--index2">
+<body class="page--index">
 
  <!-- HEADER -->
 <header class="siteHeader">
