--- a/shop.html
+++ b/shop.html
@@ -130,22 +130,23 @@
   <section class="hero hero--shop">
   <div class="container hero__grid">
 
-    <!-- LEFT: text (เหมือน index) -->
-    <div class="hero__text">
-      <p class="hero__kicker">Connect gently · ร้านค้า KRUNIKI</p>
+       <!-- LEFT -->
+    <div class="heroText">
+      <div class="goldline">Connect gently • ร้านค้า <strong>KRUNIKI</strong></div>
 
-      <h1 class="hero__title">เลือกสิ่งที่พาคุณ “กลับมารู้สึกกับตัวเอง”</h1>
+      <h1>เลือกสิ่งที่พาคุณ “กลับมารู้สึกกับตัวเอง”</h1>
 
-      <p class="hero__lead">
+      <p class="lead">
         ที่นี่คือพื้นที่รวม eBook, Meditation Track และ Brainwaves
-        เพื่อช่วยให้คุณค่อย ๆ กลับมาเห็นคุณค่าในตัวเอง — แบบอ่อนโยนและทำได้จริงในชีวิตประจำวัน
+        เพื่อช่วยให้คุณค่อย ๆ กลับมาเห็นคุณค่าในตัวเองอย่างอ่อนโยน —
+        แบบที่ทำได้จริงในชีวิตประจำวัน
       </p>
 
-      <div class="hero__actions">
-        <a class="btnPrimary" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">
+      <div class="ctaRow">
+        <a class="btn primary" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">
           ไปเลือกซื้อใน LINE SHOP
         </a>
-        <a class="btnGhost" href="#shop-products">ดูสินค้าทั้งหมด</a>
+        <a class="btn" href="#products">ดูสินค้าทั้งหมด</a>
       </div>
 
       <!-- Mini Quest (สไตล์ index: ปุ่มยาว ๆ เป็นตัวเลือก) -->
