--- a/shop.html
+++ b/shop.html
@@ -130,22 +130,32 @@
 <section id="shop" class="panel hero">
   <div class="heroGrid">
 
-    <!-- LEFT -->
-    <div class="heroText">
-      <div class="goldline">Connect gently • ร้านค้า <strong>KRUNIKI</strong></div>
-      <h1>เลือกสิ่งที่พาคุณ “กลับมารู้สึกกับตัวเอง”</h1>
+      <!-- ✅ Card ครอบ Hero -->
+    <div class="card heroCard">
+      <div class="cardInner">
+        <div class="heroGrid">
 
-      <p class="lead">
-        ที่นี่คือพื้นที่รวม eBook, Meditation Track และ Brainwaves
-        เพื่อช่วยให้คุณค่อย ๆ กลับมาเห็นคุณค่าในตัวเองอย่างอ่อนโยน —
-        แบบที่ “ทำได้จริงในชีวิตประจำวัน”
-      </p>
+          <!-- LEFT -->
+          <div class="heroText">
+            <div class="goldline">Connect gently • ร้านค้า <strong>KRUNIKI</strong></div>
 
-      <div class="ctaRow">
-        <a class="btn primary" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">
-          ไปเลือกซื้อใน LINE SHOP
-        </a>
-        <a class="btn" href="#products">ดูสินค้าทั้งหมด</a>
+            <h1>เลือกสิ่งที่พาคุณ “กลับมารู้สึกกับตัวเอง”</h1>
+
+            <p class="lead">
+              ที่นี่คือพื้นที่รวม eBook, Meditation Track และ Brainwaves
+              เพื่อช่วยให้คุณค่อย ๆ กลับมาเห็นคุณค่าในตัวเองอย่างอ่อนโยน —
+              แบบที่ “ทำได้จริงในชีวิตประจำวัน”
+            </p>
+
+            <div class="ctaRow">
+              <a class="btn primary" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">
+                ไปเลือกซื้อใน LINE SHOP
+              </a>
+              <a class="btn" href="#products">ดูสินค้าทั้งหมด</a>
+            </div>
+          </div>
+
+        </div>
       </div>
     </div>
 
