--- a/shop.html
+++ b/shop.html
@@ -135,10 +135,17 @@
       <div class="cardInner">
         <div class="heroGrid">
 
+    <section id="shop" class="panel hero">
+  <div class="container">
+
+    <!-- ✅ Card ครอบทั้งซ้าย+ขวา -->
+    <div class="card cardGold">
+      <div class="cardInner">
+
+        <div class="heroGrid">
           <!-- LEFT -->
           <div class="heroText">
             <div class="goldline">Connect gently • ร้านค้า <strong>KRUNIKI</strong></div>
-
             <h1>เลือกสิ่งที่พาคุณ “กลับมารู้สึกกับตัวเอง”</h1>
 
             <p class="lead">
@@ -155,24 +162,25 @@
             </div>
           </div>
 
+          <!-- RIGHT -->
+          <aside class="hero__card" aria-label="Self-Love 101 Note">
+            <p class="hero__cardTitle">Self-Love 101 | รักแท้จากตัวเอง</p>
+            <div class="hero__cardBody">
+              <p>
+                eBook “รักแท้จากตัวเอง” คือจุดเริ่มต้นที่พาคุณกลับมาจำได้ว่า
+                คุณไม่ต้อง “เก่งขึ้น” เพื่อมีคุณค่า — คุณมีคุณค่าอยู่แล้ว
+                เราจะค่อย ๆ กลับมารักตัวเองแบบอ่อนโยน และทำได้จริงในชีวิตประจำวัน
+              </p>
+            </div>
+          </aside>
         </div>
+
       </div>
     </div>
 
-    <!-- RIGHT: hero card (เหมือนกล่องขวาใน index) -->
-    <aside class="hero__card" aria-label="Shop Note">
-      <p class="hero__cardTitle">A gentle space to return to yourself.</p>
-      <div class="hero__cardBody">
-        <p>
-          “การกลับบ้านที่หัวใจ” ไม่ได้แปลว่าต้องเปลี่ยนตัวเองให้เป็นคนใหม่ทันที
-          แต่คือการได้กลับมารับฟังความจริงภายในอย่างไม่ตัดสิน
-          แล้วค่อย ๆ คืนพลังให้ชีวิต — ทีละนิด อย่างมั่นคง
-        </p>
-      </div>
-    </aside>
- </div>
-</div>
-
+  </div>
+</section>
+          
   <!-- BANNER (ขนาด/ฟีลเดียวกับ index: อยู่ใต้ hero) -->
   <div class="container hero__bannerWrap">
     <img
