--- a/shop.html
+++ b/shop.html
@@ -124,57 +124,56 @@
   </nav>
 </header>
 
- <main class="pageMain shopPage">
+<main class="pageMain shopPage">
 
-  <!-- HERO: Banner + Story (โครงวางให้ “เข้ากับสไตล์ index” โดยใช้ class กลาง ๆ) -->
-<section id="shop" class="panel hero">
-  <div class="heroGrid">
+  <section id="shop" class="panel hero">
+    <div class="container">
 
-      <!-- ✅ Card ครอบ Hero -->
-    <div class="card heroCard">
-      <div class="cardInner">
-        <div class="heroGrid">
+      <div class="card cardGold">
+        <div class="cardInner">
 
-    <section id="shop" class="panel hero">
-  <div class="container">
+          <div class="heroGrid">
 
-    <!-- ✅ Card ครอบทั้งซ้าย+ขวา -->
-    <div class="card cardGold">
-      <div class="cardInner">
+            <!-- LEFT -->
+            <div class="heroText">
+              <div class="goldline">Connect gently • ร้านค้า <strong>KRUNIKI</strong></div>
+              <h1>เลือกสิ่งที่พาคุณ “กลับมารู้สึกกับตัวเอง”</h1>
 
-        <div class="heroGrid">
-          <!-- LEFT -->
-          <div class="heroText">
-            <div class="goldline">Connect gently • ร้านค้า <strong>KRUNIKI</strong></div>
-            <h1>เลือกสิ่งที่พาคุณ “กลับมารู้สึกกับตัวเอง”</h1>
+              <p class="lead">
+                ที่นี่คือพื้นที่รวม eBook, Meditation Track และ Brainwaves
+                เพื่อช่วยให้คุณค่อย ๆ กลับมาเห็นคุณค่าในตัวเองอย่างอ่อนโยน —
+                แบบที่ “ทำได้จริงในชีวิตประจำวัน”
+              </p>
 
-            <p class="lead">
-              ที่นี่คือพื้นที่รวม eBook, Meditation Track และ Brainwaves
-              เพื่อช่วยให้คุณค่อย ๆ กลับมาเห็นคุณค่าในตัวเองอย่างอ่อนโยน —
-              แบบที่ “ทำได้จริงในชีวิตประจำวัน”
-            </p>
-
-            <div class="ctaRow">
-              <a class="btn primary" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">
-                ไปเลือกซื้อใน LINE SHOP
-              </a>
-              <a class="btn" href="#products">ดูสินค้าทั้งหมด</a>
+              <div class="ctaRow">
+                <a class="btn primary" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">
+                  ไปเลือกซื้อใน LINE SHOP
+                </a>
+                <a class="btn" href="#products">ดูสินค้าทั้งหมด</a>
+              </div>
             </div>
+
+            <!-- RIGHT -->
+            <aside class="hero__card" aria-label="Self-Love 101 Note">
+              <p class="hero__cardTitle">Self-Love 101 | รักแท้จากตัวเอง</p>
+              <div class="hero__cardBody">
+                <p>
+                  eBook “รักแท้จากตัวเอง” คือจุดเริ่มต้นที่พาคุณกลับมาจำได้ว่า
+                  คุณไม่ต้อง “เก่งขึ้น” เพื่อมีคุณค่า — คุณมีคุณค่าอยู่แล้ว
+                  เราจะค่อย ๆ กลับมารักตัวเองแบบอ่อนโยน และทำได้จริงในชีวิตประจำวัน
+                </p>
+              </div>
+            </aside>
+
           </div>
 
-          <!-- RIGHT -->
-          <aside class="hero__card" aria-label="Self-Love 101 Note">
-            <p class="hero__cardTitle">Self-Love 101 | รักแท้จากตัวเอง</p>
-            <div class="hero__cardBody">
-              <p>
-                eBook “รักแท้จากตัวเอง” คือจุดเริ่มต้นที่พาคุณกลับมาจำได้ว่า
-                คุณไม่ต้อง “เก่งขึ้น” เพื่อมีคุณค่า — คุณมีคุณค่าอยู่แล้ว
-                เราจะค่อย ๆ กลับมารักตัวเองแบบอ่อนโยน และทำได้จริงในชีวิตประจำวัน
-              </p>
-            </div>
-          </aside>
         </div>
-          
+      </div>
+
+    </div>
+  </section>
+
+</main>          
   <!-- BANNER (ขนาด/ฟีลเดียวกับ index: อยู่ใต้ hero) -->
   <div class="container hero__bannerWrap">
     <img
