--- a/shop.html
+++ b/shop.html
@@ -26,7 +26,7 @@
 </head>
   
 <body>
-<body class="page--shop">
+<body class="page--shop shopPage">
 
  <!-- HEADER -->
 <header class="siteHeader">
