--- a/shop.html
+++ b/shop.html
@@ -21,11 +21,10 @@
   <link rel="stylesheet" href="assets/css2/fixes/98_final_polish.css">
 
   <!-- เฉพาะหน้า shop -->
-<link rel="stylesheet" href="asset/css2/shop.css">
+<link rel="stylesheet" href="assets/css2/shop.css">
   <script src="assets/main.js" defer></script>
 </head>
   
-<body>
 <body class="page--shop shopPage">
 
  <!-- HEADER -->
