--- a/shop.html
+++ b/shop.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="assets/css2/fixes/98_final_polish.css">
 
   <!-- เฉพาะหน้า shop -->
-<link rel="stylesheet" href="assets/css2/shop.css">
+<link rel="stylesheet" href="assets/css2/pages/shop.css">
   <script src="assets/main.js" defer></script>
 </head>
   
