--- a/shop.html
+++ b/shop.html
@@ -250,6 +250,32 @@
         </div>
       </article>
 
+<!-- 5) Affirmations -->
+<article class="pCard">
+  <img class="pImg"
+       src="assets/images/shop/rec-affirmations.webp"
+       alt="Affirmations — KRUNIKI"
+       loading="lazy">
+
+  <div class="pBody">
+    <p class="pKicker">Affirmations</p>
+    <h3 class="pTitle">Affirmations</h3>
+
+    <p class="pDesc">
+      ถ้อยคำเยียวยาเพื่อพูดกับตัวเองใหม่—ช่วยค่อย ๆ ปรับ “เสียงในใจ”
+      ให้กลับมาอ่อนโยน มั่นคง และเต็มไปด้วยพลังรักแท้จากภายใน
+    </p>
+
+    <p class="pQuote">
+      “ถ้อยคำเพื่อเปลี่ยนความคิด และฟื้นพลังหัวใจ”
+    </p>
+
+    <a class="btn btnSoftGold pBtn" href="shop-affirmations.html">
+      เลือกชุด Affirmations สำหรับคุณ
+    </a>
+  </div>
+</article>
+      
       <!-- 4) Elephant Pants -->
       <article class="pCard pCard--lite">
         <img class="pImg"
