--- a/shop.html
+++ b/shop.html
@@ -298,22 +298,35 @@
   </div>
 </section>
 
-  <!-- CTA: ปิดท้าย -->
-  <section class="section closingCtaSection">
-    <div class="container">
-      <div class="ctaBox">
-        <h2 class="sectionTitle">พร้อมเริ่ม “กลับบ้านที่หัวใจ” แล้วใช่ไหม</h2>
-        <p class="sectionLead">
-          เลือก 1 อย่างที่เหมาะกับคุณตอนนี้ แล้วปล่อยให้การเปลี่ยนแปลงค่อย ๆ เปิดออกอย่างเป็นธรรมชาติ
-        </p>
-        <div class="ctaRow">
-          <a class="btnPrimary" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">
-            เปิดร้าน LINE SHOP ตอนนี้
-          </a>
-          <a class="btnGhost" href="index.html">กลับหน้าแรก</a>
+ <!-- CTA: ปิดท้าย (match index2) -->
+<section class="panel closingCtaSection" aria-label="Closing Call to Action">
+  <div class="container">
+
+    <div class="card cardGold">
+      <div class="cardInner">
+
+        <div class="closingCta">
+          <div class="goldline">Connect gently • เริ่มต้นอย่างอ่อนโยน</div>
+
+          <h2 class="sectionTitle">พร้อมเริ่ม “กลับบ้านที่หัวใจ” แล้วใช่ไหม</h2>
+
+          <p class="sectionLead">
+            เลือก 1 อย่างที่เหมาะกับคุณตอนนี้ แล้วปล่อยให้การเปลี่ยนแปลงค่อย ๆ
+            เปิดออกอย่างเป็นธรรมชาติ
+          </p>
+
+          <div class="ctaRow">
+            <a class="btn primary" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">
+              เปิดร้าน LINE SHOP ตอนนี้
+            </a>
+            <a class="btn" href="index2.html">กลับหน้าแรก</a>
+          </div>
         </div>
+
       </div>
     </div>
+
+  </div>
    
       <footer>
         © 2026 KRUNIKI • <span class="gold">Heart Stillness Healing</span>
