--- a/shop.html
+++ b/shop.html
@@ -319,7 +319,7 @@
             <a class="btn primary" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">
               เปิดร้าน LINE SHOP ตอนนี้
             </a>
-            <a class="btn" href="index2.html">กลับหน้าแรก</a>
+            <a class="btn" href="index.html">กลับหน้าแรก</a>
           </div>
         </div>
 
