--- a/shop-ebook-package.html
+++ b/shop-ebook-package.html
@@ -168,6 +168,17 @@
     </div>
   </section>
 
+ <!-- BANNER (ขนาด/ฟีลเดียวกับ index: อยู่ใต้ hero) -->
+  <div class="container hero__bannerWrap">
+    <img
+      class="hero__banner"
+      <img class="pImg"
+      src="assets/images/shop/rec-ebook-package.webp"
+      alt="KRUNIKI — Heart & Healing Shop"
+      loading="lazy"
+    />
+  </div>
+  
   <!-- ================================
        PRODUCT STORY
        ================================ -->
