--- a/shop-ebook-package.html
+++ b/shop-ebook-package.html
@@ -389,7 +389,7 @@
         </p>
 
         <div class="ctaRow">
-          <a class="btn primary" href="#packages">
+          <a class="btn primary" href="https://shop.line.me/@mew3619k">
             เลือกแพ็กเกจ
           </a>
           <a class="btn" href="shop.html">
