--- a/shop-ebook-package.html
+++ b/shop-ebook-package.html
@@ -173,7 +173,7 @@
     <img
       class="hero__banner"
       <img class="pImg"
-      src="assets/images/banners/ebook early bird offer.webp"
+      src="assets/images/banners/ebook-early-bird-offer.webp"
       alt="KRUNIKI — Heart & Healing Shop"
       loading="lazy"
     />
