--- a/shop-ebook-package.html
+++ b/shop-ebook-package.html
@@ -157,7 +157,7 @@
         <!-- RIGHT: IMAGE (ใส่ภาพทีหลังได้) -->
         <div class="heroMedia">
           <img 
-            src="assets/images/products/ebook-cover.webp" 
+            src="assets/images/shop/KRUNIKI-การ์ตูน.webp" 
             alt="eBook รักแท้จากตัวเอง"
             class="hero__img"
             loading="lazy"
