--- a/shop-ebook-package.html
+++ b/shop-ebook-package.html
@@ -131,42 +131,41 @@
   <!-- ================================
        HERO PRODUCT
        ================================ -->
-  <section class="panel hero productHero">
-    <div class="container">
+<section class="panel hero productHero productHero--compact">
+  <div class="container">
 
-      <div class="heroGrid">
+    <div class="heroGrid heroGrid--compact">
 
-        <!-- LEFT: TEXT -->
-        <div class="heroText">
-          <div class="goldline">eBook Package • KRUNIKI</div>
-          <h1>รักแท้จากตัวเอง</h1>
+      <!-- LEFT: TEXT -->
+      <div class="heroText heroText--compact">
+        <div class="goldline">eBook Package • KRUNIKI</div>
+        <h1>รักแท้จากตัวเอง</h1>
 
-          <p class="lead">
-            “รักแท้จากตัวเอง” ไม่ใช่แค่หนังสือ —  
-            แต่คือประตูบานแรก สู่การเยียวยา ฟื้นหัวใจ  
-            และปลุกตัวตนที่แท้จริงให้กลับมาอีกครั้ง
-          </p>
+        <p class="lead">
+          “รักแท้จากตัวเอง” ไม่ใช่แค่หนังสือ —  
+          แต่คือประตูบานแรก สู่การเยียวยา ฟื้นหัวใจ  
+          และปลุกตัวตนที่แท้จริงให้กลับมาอีกครั้ง
+        </p>
 
-          <p>
-            ส่งไฟล์ PDF ทาง LINE / Email / Google Drive  
-            เปิดอ่านได้ทันทีบนมือถือ iPad และคอมพิวเตอร์
-          </p>
-
-        </div>
-
-        <!-- RIGHT: IMAGE (ใส่ภาพทีหลังได้) -->
-        <div class="heroMedia">
-          <img 
-            src="assets/images/shop/KRUNIKI-การ์ตูน.webp" 
-            alt="eBook รักแท้จากตัวเอง"
-            class="hero__img"
-            loading="lazy"
-          />
-        </div>
-
+        <p>
+          ส่งไฟล์ PDF ทาง LINE / Email / Google Drive  
+          เปิดอ่านได้ทันทีบนมือถือ iPad และคอมพิวเตอร์
+        </p>
       </div>
+
+      <!-- RIGHT: IMAGE -->
+      <div class="heroMedia heroMedia--compact">
+        <img 
+          src="assets/images/shop/KRUNIKI-การ์ตูน.webp" 
+          alt="eBook รักแท้จากตัวเอง"
+          class="hero__img hero__img--compact"
+          loading="lazy"
+        />
+      </div>
+
     </div>
-  </section>
+  </div>
+</section>
 
  <!-- BANNER (ขนาด/ฟีลเดียวกับ index: อยู่ใต้ hero) -->
   <div class="container hero__bannerWrap">
