--- a/shop-ebook-package.html
+++ b/shop-ebook-package.html
@@ -25,7 +25,7 @@
   <script src="assets/main.js" defer></script>
 </head>
   
-<body class="page--shop shopPage">
+<body class="ebookPage">
 
  <!-- HEADER -->
 <header class="siteHeader">
