--- a/shop-ebook-package.html
+++ b/shop-ebook-package.html
@@ -156,7 +156,7 @@
       <!-- RIGHT: IMAGE -->
       <div class="heroMedia heroMedia--compact">
         <img 
-          src="assets/images/shop/KRUNIKI-การ์ตูน.webp" 
+          src="assets/images/banners/ebook-early-bird-offer.webp" 
           alt="eBook รักแท้จากตัวเอง"
           class="hero__img hero__img--compact"
           loading="lazy"
