--- a/shop-ebook-package.html
+++ b/shop-ebook-package.html
@@ -5,23 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>KRUNIKI Academy</title>
   <meta name="description" content="KRUNIKI — Heart Awakening • Self-Healing • Conscious Learning" />
-<style>
-  :root{
-    --font-brand: "Times New Roman", Times, serif;
-    --font-head:  "Times New Roman", Times, serif;
-  }
-</style>
-  
-  <!-- 🔗 CSS เดิมของนิกี้ -->
+
+  <style>
+    :root{
+      --font-brand: "Times New Roman", Times, serif;
+      --font-head:  "Times New Roman", Times, serif;
+    }
+  </style>
+
+  <!-- Core -->
   <link rel="stylesheet" href="assets/css2/app.css">
   <link rel="stylesheet" href="assets/css2/core/02_base.css">
   <link rel="stylesheet" href="assets/hamburger.css">
-  <link rel="stylesheet" href="assets/css2/pages/index2.css">
-  <link rel="stylesheet" href="assets/css2/fixes/99_hotfix.css">
+
+  <!-- Page-specific -->
+  <link rel="stylesheet" href="assets/css2/pages/shop.css">
+
+  <!-- Final overrides (ต้องท้ายสุด) -->
   <link rel="stylesheet" href="assets/css2/fixes/98_final_polish.css">
 
-  <!-- เฉพาะหน้า shop -->
-<link rel="stylesheet" href="assets/css2/pages/shop.css">
   <script src="assets/main.js" defer></script>
 </head>
   
