--- a/shop-ebook-package.html
+++ b/shop-ebook-package.html
@@ -18,8 +18,11 @@
   <link rel="stylesheet" href="assets/css2/core/02_base.css">
   <link rel="stylesheet" href="assets/hamburger.css">
 
-  <!-- Page-specific -->
-  <link rel="stylesheet" href="assets/css2/pages/shop.css">
+  <!-- Shop global -->
+<link rel="stylesheet" href="assets/css2/pages/shop.css">
+
+<!-- Product page specific -->
+<link rel="stylesheet" href="assets/css2/pages/shop-ebook-package.css">
 
   <!-- Final overrides (ต้องท้ายสุด) -->
   <link rel="stylesheet" href="assets/css2/fixes/98_final_polish.css">
