--- a/shop-ebook-package.html
+++ b/shop-ebook-package.html
@@ -30,8 +30,8 @@
   <script src="assets/main.js" defer></script>
 </head>
   
-
-
+<body class="page--shop-ebook">
+  
  <!-- HEADER -->
 <header class="siteHeader">
   <div class="navInner">
