--- a/shop-ebook-package.html
+++ b/shop-ebook-package.html
@@ -344,30 +344,31 @@
         </div>
 
         <!-- Package 4 -->
-        <div class="card cardGold">
-          <h3>Soul Awakening Master Set</h3>
-          <p class="price">2,490 บาท</p>
+<div class="card cardGold bestSellerCard">
 
-          <ul>
-            <li>eBook (PDF)</li>
-            <li>ไฟล์เสียง 4 แทร็ก</li>
-            <li>Mini Course 1.30 ชม.</li>
-          </ul>
+ <div class="badge bestSeller">Best Seller</div>
 
-          <p class="small">
-            เหมาะสำหรับผู้ที่ต้องการเยียวยาแบบครบองค์รวม  
-            พร้อมเส้นทางฝึกฝนต่ออย่างเป็นระบบ
-          </p>
+  <h3>Soul Awakening Master Set</h3>
+  <p class="price">2,490 บาท</p>
 
-          <a class="btn primary" href="https://shop.line.me/@mew3619k/product/1007888161" target="_blank">
-            สั่งซื้อแพ็กนี้
-          </a>
-        </div>
+  <ul>
+    <li>eBook (PDF)</li>
+    <li>ไฟล์เสียง 4 แทร็ก</li>
+    <li>Mini Course 1.30 ชม.</li>
+  </ul>
 
-      </div>
-    </div>
-  </section>
+  <p class="small">
+    เหมาะสำหรับผู้ที่ต้องการเยียวยาแบบครบองค์รวม  
+    พร้อมเส้นทางฝึกฝนต่ออย่างเป็นระบบ
+  </p>
 
+  <a class="btn primary"
+     href="https://shop.line.me/@mew3619k/product/1007888161"
+     target="_blank">
+    สั่งซื้อแพ็กนี้
+  </a>
+
+</div>
   <!-- ================================
        FINAL CTA
        ================================ -->
