--- a/shop-ebook-package.html
+++ b/shop-ebook-package.html
@@ -391,9 +391,10 @@
         </div>
       </div>
 
-      <footer>
-        © 2026 KRUNIKI • <span class="gold">Heart Stillness Healing</span>
-      </footer>
+      <footer class="siteFooter">
+  © 2026 KRUNIKI • <span class="gold">Heart Stillness Healing</span>
+</footer>
+
     </section>
   </main>
 
