--- a/shop-ebook-package.html
+++ b/shop-ebook-package.html
@@ -391,13 +391,11 @@
         </div>
       </div>
 
-      <footer class="siteFooter">
-  © 2026 KRUNIKI • <span class="gold">Heart Stillness Healing</span>
-</footer>
-
+  <footer>
+        © 2026 KRUNIKI • <span class="gold">Heart Stillness Healing</span>
+      </footer>
     </section>
   </main>
 
 </body>
 </html>
-
