--- a/shop-ebook-package.html
+++ b/shop-ebook-package.html
@@ -368,20 +368,25 @@
   </a>
 
 </div>
-  <!-- ================================
-       FINAL CTA
-       ================================ -->
-  <section class="section closingCtaSection">
-    <div class="container">
+        
+<!-- ================================
+     FINAL CTA
+     ================================ -->
+<section class="section closingCtaSection">
+  <div class="container">
 
+    <div class="ctaCard">
       <div class="ctaBox">
-        <h2 class="sectionTitle">พร้อมให้หัวใจกลับมาเต็มเปี่ยมอีกครั้งหรือยัง?</h2>
+        <h2 class="sectionTitle">
+          พร้อมให้หัวใจกลับมาเต็มเปี่ยมอีกครั้งหรือยัง?
+        </h2>
+
         <p class="sectionLead">
           เลือกแพ็กเกจที่ตรงกับพลังของคุณ  
           แล้วปล่อยให้การเยียวยาเริ่มต้นอย่างอ่อนโยนตั้งแต่วันนี้
         </p>
 
-   <div class="ctaRow">
+        <div class="ctaRow">
           <a class="btn primary" href="https://shop.line.me/@mew3619k">
             เลือกแพ็กเกจ
           </a>
@@ -390,7 +395,12 @@
           </a>
         </div>
       </div>
+    </div>
 
+  </div>
+</section>
+
+        
   <footer>
         © 2026 KRUNIKI • <span class="gold">Heart Stillness Healing</span>
       </footer>
