--- a/shop-ebook-package.html
+++ b/shop-ebook-package.html
@@ -371,39 +371,31 @@
         
 <!-- ================================
      FINAL CTA
-     ================================ -->
+================================ -->
 <section class="section closingCtaSection">
   <div class="container">
+    <div class="ctaBox">
+      <h2 class="sectionTitle">พร้อมให้หัวใจกลับมาเต็มเปี่ยมอีกครั้งหรือยัง?</h2>
+      <p class="sectionLead">
+        เลือกแพ็กเกจที่ตรงกับพลังของคุณ
+        แล้วปล่อยให้การเยียวยาเริ่มต้นอย่างอ่อนโยนตั้งแต่วันนี้
+      </p>
 
-    <div class="ctaCard">
-      <div class="ctaBox">
-        <h2 class="sectionTitle">
-          พร้อมให้หัวใจกลับมาเต็มเปี่ยมอีกครั้งหรือยัง?
-        </h2>
-
-        <p class="sectionLead">
-          เลือกแพ็กเกจที่ตรงกับพลังของคุณ  
-          แล้วปล่อยให้การเยียวยาเริ่มต้นอย่างอ่อนโยนตั้งแต่วันนี้
-        </p>
-
-        <div class="ctaRow">
-          <a class="btn primary" href="https://shop.line.me/@mew3619k">
-            เลือกแพ็กเกจ
-          </a>
-          <a class="btn" href="shop.html">
-            กลับไปหน้าร้านค้า
-          </a>
-        </div>
+      <div class="ctaRow">
+        <a class="btn primary" href="https://shop.line.me/@mew3619k">เลือกแพ็กเกจ</a>
+        <a class="btn" href="shop.html">กลับไปหน้าร้านค้า</a>
       </div>
     </div>
-
   </div>
 </section>
 
+<!-- ================================
+     FOOTER (แยกออกมาชัดเจน)
+================================ -->
+<footer class="siteFooter">
+  © 2026 KRUNIKI • <span class="gold">Heart Stillness Healing</span>
+</footer>
         
-  <footer>
-        © 2026 KRUNIKI • <span class="gold">Heart Stillness Healing</span>
-      </footer>
     </section>
   </main>
 
