--- a/shop-ebook-package.html
+++ b/shop-ebook-package.html
@@ -388,14 +388,12 @@
     </div>
   </div>
 </section>
-
-<!-- ================================
+        <!-- ================================
      FOOTER (แยกออกมาชัดเจน)
 ================================ -->
-<footer class="siteFooter">
+  <footer>
   © 2026 KRUNIKI • <span class="gold">Heart Stillness Healing</span>
 </footer>
-        
     </section>
   </main>
 
