--- a/shop-brainwaves.html
+++ b/shop-brainwaves.html
@@ -157,6 +157,18 @@
               ส่งไฟล์เสียงทาง LINE / Email / Google Drive  
               เปิดฟังได้ทันทีบนมือถือ iPad และคอมพิวเตอร์
             </p>
+            <!-- CTA BUTTON -->
+<div class="heroCta">
+  <a
+    class="btn btnGold"
+    href="https://shop.line.me/@mew3619k"
+    target="_blank"
+    rel="noopener"
+    aria-label="ไปที่ LINE SHOP ของ KRUNIKI"
+  >
+    🛒 เลือกซื้อใน LINE SHOP
+  </a>
+</div>
           </div>
 
           <!-- RIGHT: IMAGE -->
