--- a/shop-brainwaves.html
+++ b/shop-brainwaves.html
@@ -166,6 +166,7 @@
     rel="noopener"
     aria-label="ไปที่ LINE SHOP ของ KRUNIKI"
   >
+    <div class="heroText heroText--compact">
     🛒 เลือกซื้อใน LINE SHOP
   </a>
 </div>
