--- a/shop-brainwaves.html
+++ b/shop-brainwaves.html
@@ -166,10 +166,8 @@
     rel="noopener"
     aria-label="ไปที่ LINE SHOP ของ KRUNIKI"
   >
-    🛒 เลือกซื้อใน LINE SHOP
-  </a>
-  <div class="heroText heroText--compact">
-    
+    เลือกซื้อใน LINE SHOP
+  </a>    
   </div>
           </div>
 
