--- a/shop-ebook-package.html
+++ b/shop-ebook-package.html
@@ -156,7 +156,15 @@
           ส่งไฟล์ PDF ทาง LINE / Email / Google Drive  
           เปิดอ่านได้ทันทีบนมือถือ iPad และคอมพิวเตอร์
         </p>
-      </div>
+        
+         <div class="ctaRow">
+            <a class="btn primary" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">
+              ไปเลือกซื้อใน LINE SHOP
+            </a>
+            <a class="btn" href="#products">ดูสินค้าทั้งหมด</a>
+          </div>
+        </div>      
+    </div>
 
       <!-- RIGHT: IMAGE -->
       <div class="heroMedia heroMedia--compact">
