--- a/shop-ebook-package.html
+++ b/shop-ebook-package.html
@@ -156,8 +156,19 @@
           ส่งไฟล์ PDF ทาง LINE / Email / Google Drive  
           เปิดอ่านได้ทันทีบนมือถือ iPad และคอมพิวเตอร์
         </p>
-        
-      <!-- RIGHT: IMAGE -->
+
+ <div class="ctaRow ctaRow--hero">
+  <a class="btn primary btnGold"
+     href="https://shop.line.me/@mew3619k"
+     target="_blank" rel="noopener">
+    ไปเลือกซื้อใน LINE SHOP
+  </a>
+  <a class="btn btnGhost" href="#products">
+    ดูสินค้าทั้งหมด
+  </a>
+</div>
+
+<!-- RIGHT: IMAGE -->
       <div class="heroMedia heroMedia--compact">
         <img 
           src="assets/images/banners/ebook-early-bird-offer.webp" 
