--- a/shop-ebook-package.html
+++ b/shop-ebook-package.html
@@ -136,52 +136,49 @@
   <!-- ================================
        HERO PRODUCT
        ================================ -->
-<section class="panel hero productHero productHero--compact">
-  <div class="container">
+  <section class="panel hero productHero productHero--compact">
+    <div class="container">
 
-    <div class="heroGrid heroGrid--compact">
+      <div class="heroGrid heroGrid--compact">
 
-      <!-- LEFT: TEXT -->
-      <div class="heroText heroText--compact">
-        <div class="goldline">eBook Package • KRUNIKI</div>
-        <h1>รักแท้จากตัวเอง</h1>
+        <!-- LEFT: TEXT -->
+        <div class="heroText heroText--compact">
+          <div class="goldline">eBook Package • KRUNIKI</div>
+          <h1>รักแท้จากตัวเอง</h1>
 
-        <p class="lead">
-          “รักแท้จากตัวเอง” ไม่ใช่แค่หนังสือ —  
-          แต่คือประตูบานแรก สู่การเยียวยา ฟื้นหัวใจ  
-          และปลุกตัวตนที่แท้จริงให้กลับมาอีกครั้ง
-        </p>
+          <p class="lead">
+            “รักแท้จากตัวเอง” ไม่ใช่แค่หนังสือ —
+            แต่คือประตูบานแรก สู่การเยียวยา ฟื้นหัวใจ
+            และปลุกตัวตนที่แท้จริงให้กลับมาอีกครั้ง
+          </p>
 
-        <p>
-          ส่งไฟล์ PDF ทาง LINE / Email / Google Drive  
-          เปิดอ่านได้ทันทีบนมือถือ iPad และคอมพิวเตอร์
-        </p>
+          <p>
+            ส่งไฟล์ PDF ทาง LINE / Email / Google Drive
+            เปิดอ่านได้ทันทีบนมือถือ iPad และคอมพิวเตอร์
+          </p>
 
- <div class="ctaRow ctaRow--hero">
-  <a class="btn primary btnGold"
-     href="https://shop.line.me/@mew3619k"
-     target="_blank" rel="noopener">
-    ไปเลือกซื้อใน LINE SHOP
-  </a>
-  <a class="btn btnGhost" href="#products">
-    ดูสินค้าทั้งหมด
-  </a>
-</div>
+          <div class="ctaRow">
+            <a class="btn primary" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">
+              ไปเลือกซื้อใน LINE SHOP
+            </a>
+            <a class="btn" href="#products">ดูสินค้าทั้งหมด</a>
+          </div>
+        </div>
 
-<!-- RIGHT: IMAGE -->
-      <div class="heroMedia heroMedia--compact">
-        <img 
-          src="assets/images/banners/ebook-early-bird-offer.webp" 
-          alt="eBook รักแท้จากตัวเอง"
-          class="hero__img hero__img--compact"
-          loading="lazy"
-        />
+        <!-- RIGHT: IMAGE -->
+        <div class="heroMedia heroMedia--compact">
+          <img
+            src="assets/images/banners/ebook-early-bird-offer.webp"
+            alt="eBook รักแท้จากตัวเอง"
+            class="hero__img hero__img--compact"
+            loading="lazy"
+          />
+        </div>
+
       </div>
-
     </div>
-  </div>
-</section>
-  
+  </section>
+
   <!-- ================================
        PRODUCT STORY
        ================================ -->
