--- a/shop-ebook-package.html
+++ b/shop-ebook-package.html
@@ -394,8 +394,11 @@
       </div>
     </div>
   </div>
-</section>
 
+  <footer class="siteFooter">
+  © 2026 KRUNIKI • <span class="gold">Heart Stillness Healing</span>
+</footer>
+</section>
   </main>
 
 </body>
