--- a/shop-ebook-package.html
+++ b/shop-ebook-package.html
@@ -394,12 +394,14 @@
       </div>
     </div>
   </div>
-
-  <footer class="siteFooter">
-  © 2026 KRUNIKI • <span class="gold">Heart Stillness Healing</span>
-</footer>
 </section>
   </main>
+  
+ <footer class="siteFooter">
+  <div class="container">
+    © 2026 KRUNIKI • <span class="gold">Heart Stillness Healing</span>
+  </div>
+</footer>
 
 </body>
 </html>
